# multimodal-agent-builder

./: .eslintrc.json  .gitignore  .prettierignore  AGENTS.md  README.md  architecture.md  coverage.xml  curated_hf_datasets.csv  package-lock.json  package.json  pyproject.toml  run.py  tsconfig.json
.cursor/: environment.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  njsscan.yml  project-board.yml
client/src/: App.tsx
client/src/components/Layout/: Sidebar.tsx
client/src/pages/: CouncilChat.tsx
client/src/types/: council.ts
config/: config.py
docs/: PROJECT_PLAN.md  SECURITY_OSI.md
docs/plans/: 2026-04-21-civilian-reserve-design.md
multimodal-agent-builder/: run.py
multimodal-agent-builder/src/: main.py
projects/: TIMELINE.md
scripts/: data-analysis-agent.py  data-filtration-agent.py  data-management-agent.py  run_coding_agent_pipeline.py  training-categorizing-workflow.py
scripts/.ipynb_checkpoints/: instantiate-the-agent-builder-checkpoint.py
scripts/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
server/: index.ts  otel.ts  replitAuth.ts  routes.ts  vite.ts
server/middleware/: blacklist.ts  security.ts
server/services/: auditLogger.ts  multimodalAgent.ts  threatIntelligence.ts
src/: main.py  moa_agent.py  train_llm_moa.py
src/agents/: coding_agent.py  council_agent.py
src/api/: auth.py  council_api.py  evaluations.py  rag_api.py
src/utils/: auth_utils.py
types/node/: index.d.ts
